Fix dialog footer white space

--- a/app/assets/stylesheets/common/dialog.css.scss
+++ b/app/assets/stylesheets/common/dialog.css.scss
@@ -163,6 +163,7 @@ body.is-inDialog {
 
 .Dialog-footer {
   padding: $sMargin-group 0;
+  background: $cStructure-grayBkg;
   text-align: center;
 }
 
